--- a/src/components/FloatingActionButtons.css
+++ b/src/components/FloatingActionButtons.css
@@ -22,14 +22,15 @@
   justify-content: center;
   width: 80px;
   height: 80px;
-  border-radius: 20%;
+  border-radius: 50%;
   margin-right: 20px;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
   /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px); */
+  -webkit-backdrop-filter: blur(5px);
+  background: rgba(255, 255, 255, 0.5); */
 }
 
 .fab-button:hover {
@@ -67,8 +68,10 @@
   font-size: var(--font-md);
   font-weight: 800;
   text-transform: uppercase;
-  color: rgb(14, 9, 0);
-  text-shadow: 0 1px 2px rgba(255, 221, 0, 0.5);
+  /* color: rgb(14, 9, 0);
+  text-shadow: 0 1px 2px rgba(255, 221, 0, 0.5); */
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 1);
   text-align: center;
   line-height: 0.5;
   letter-spacing: -1px;
@@ -107,13 +110,21 @@
 }
 
 .fab-button.mail-fab-button {
-  background: linear-gradient(135deg, #4a90e2 0%, #357abd 100%);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+  /* backdrop-filter: blur(5px); */
+  /* -webkit-backdrop-filter: blur(0px); */
+  background: rgba(85, 85, 85, 0.8);
   color: white;
   position: relative;
 }
 
 .fab-button.mail-fab-button .fab-icon {
   position: relative;
+}
+
+.fab-button.mail-fab-button .mail-icon {
+  width: 35px;
+  height: 35px;
 }
 
 .fab-mail-notification-dot {
@@ -178,6 +189,10 @@
   
   .fab-label {
     font-size: var(--font-sm);
+  }
+  .fab-button.mail-fab-button .mail-icon {
+    width: 25px;
+    height: 25px;
   }
 }
 
